fix height when image too tall

--- a/HelloWorldNews/themes/the-logic/source/css/chuyen-muc.css
+++ b/HelloWorldNews/themes/the-logic/source/css/chuyen-muc.css
@@ -1,5 +1,6 @@
 #list-article .img-cont {
     height: 100%;
+    max-height: 150px;
     position: relative;
 }
 
